--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             </div>
         </div>
         <div class="containers">
+            <div class="product-itemscontainer">
+                <div class="prod-subcontainer"></div>
+            </div>
             <div class="product"></div>
         </div>
     
