admin sayfası ve form yapısı olusturuldu

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <div class="prod-subcontainer"></div>
             </div>
             <div class="product"></div>
+            <div id="addProduct"></div>
         </div>
     
     <script src="assets/js/app.js"></script>
