resim alanı eklendi ve localstorage a url olarak çekildi

--- a/admin.html
+++ b/admin.html
@@ -8,9 +8,12 @@
 <body>
     <form id="dataForm">
         <input type="text" id="productAddTitle" placeholder="Ürün İsmi">
-        <input type="textarea" id="productAddTitle" placeholder="Ürün Açıklaması">
+        <input type="textarea" id="productAddDesc" placeholder="Ürün Açıklaması">
         <input type="file" id="productAddimage" placeholder="Ürün Resmi">
         <input type="text" id="productAddPrice" placeholder="Ürün Fiyatı">
+        <input type="submit" placeholder="Gönder">
     </form>
+
+    <script src="assets/js/admin.js"></script>
 </body>
 </html>
