--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
                 <div class="prod-subcontainer"></div>
             </div>
             <div class="product"></div>
-            <div id="addProduct"></div>
+            <h2 class="addProductHead">Yeni Eklenen Ürün</h2>
+            <div class="addProductContainer">
+                <div class="addProduct"></div>
+            </div>
         </div>
     
     <script src="assets/js/app.js"></script>
