kategori seçimi yapıldı.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <div class="header">
             <div class="containers">
                 <a href="#" class="basket">Sepet</a>
+                <select id="categorySelect" onchange="filterByCategory()">
+                
+                </select>
             </div>
         </div>
         <div class="containers">
@@ -28,6 +31,8 @@
                 <div class="addProduct"></div>
             </div>
         </div>
+
+        <div class="filterProductinds"></div>
     
     <script src="assets/js/app.js"></script>
 </body>
