app css güncellendi

--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
                 <div class="prod-subcontainer"></div>
             </div>
             <div class="product"></div>
+                <div class="filterProductinds"></div>
             <h2 class="addProductHead">Yeni Eklenen Ürün</h2>
             <div class="addProductContainer">
                 <div class="addProduct"></div>
             </div>
         </div>
 
-        <div class="filterProductinds"></div>
+        <div class="containers">
+        </div>
     
     <script src="assets/js/app.js"></script>
 </body>
