css düzenlemelerinin bir kısmı yapıldı ve javscript kodu guncellendi

--- a/index.html
+++ b/index.html
@@ -15,10 +15,18 @@
     
         <div class="header">
             <div class="containers">
-                <a href="#" class="basket">Sepet</a>
-                <select id="categorySelect" onchange="filterByCategory()">
-                
-                </select>
+                <div class="main-menu">
+                    <div class="sepetCont">               
+                        <a href="#" class="basket"><i class="fa-solid fa-basket-shopping"></i>Sepet</a>
+                    </div>
+                    <div class="logoCont">
+                        <img src="assets/img/logo.svg" alt="">
+                    </div>
+                    <div class="selectCont">
+                        <select id="categorySelect" onchange="filterByCategory()">
+                        </select>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="containers">
