sepete ekle kısmı acıldı ve localstorage tan veri alındı

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <div class="containers">
                 <div class="main-menu">
                     <div class="sepetCont">               
-                        <a href="#" class="basket"><i class="fa-solid fa-basket-shopping"></i>Sepet</a>
+                        <div class="basket"><i class="fa-solid fa-basket-shopping"></i>Sepet</div>
+                        <div class="basketCont"></div>
                     </div>
                     <div class="logoCont">
                         <img src="assets/img/logo.svg" alt="">
